--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Random user generator</title>
 </head>
 <body>
-    
+    <div id="app">
+        <img v-bind:src="picture" v-bind:alt="firstname" />
+        <h1>{{firstname}} {{lastname}}</h1>
+        <h2>Email: {{email}}</h2>
+        <button>Get another random user</button>
+    </div>
+
+        
+
+    <script src="https://unpkg.com/vue@3.0.5"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
