--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div id="app">
-        <img v-bind:src="picture" v-bind:alt="firstname" />
+        <img :class="gender" v-bind:src="picture" :alt="`${firstname} ${lastname}`" />
         <h1>{{firstname}} {{lastname}}</h1>
         <h2>Email: {{email}}</h2>
-        <button>Get another random user</button>
+        <button v-on:click="getUser()" :class="gender">Get another random user</button>
     </div>
 
         
